--- a/index.html
+++ b/index.html
@@ -24,40 +24,14 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere sem vitae eleifend venenatis. Vivamus at lectus non justo vulputate sagittis ac posuere purus. Vivamus fermentum turpis a dignissim placerat. Pellentesque at libero dolor. Sed leo diam, faucibus vitae purus vel, pellentesque facilisis ex. Cras imperdiet vel nulla vitae venenatis. Nullam finibus ligula dui, ac rutrum nibh volutpat sit amet. Curabitur ornare, lorem sed molestie posuere, turpis ipsum luctus nisi, eu blandit metus tellus vitae dolor. Vestibulum libero urna, hendrerit eu tortor sed, ullamcorper sodales justo. Aliquam erat volutpat. Sed sed urna dui.</p>
 
           <p>Nam accumsan luctus risus eget ornare. Nam tincidunt libero vel tortor tempor, et cursus ex cursus. Nullam eu massa sit amet sem bibendum euismod sit amet id turpis. Fusce congue mauris dictum ipsum dictum, imperdiet convallis magna ornare. Suspendisse ullamcorper pharetra scelerisque. Nunc elit mauris, egestas eu aliquam ac, iaculis ac justo. In dolor ante, malesuada a interdum non, sollicitudin et ex. Maecenas pretium nulla tortor, id congue enim auctor a. Aliquam vitae commodo metus.</p>
-          
+
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere sem vitae eleifend venenatis. Vivamus at lectus non justo vulputate sagittis ac posuere purus. Vivamus fermentum turpis a dignissim placerat. Pellentesque at libero dolor. Sed leo diam, faucibus vitae purus vel, pellentesque facilisis ex. Cras imperdiet vel nulla vitae venenatis. Nullam finibus ligula dui, ac rutrum nibh volutpat sit amet. Curabitur ornare, lorem sed molestie posuere, turpis ipsum luctus nisi, eu blandit metus tellus vitae dolor. Vestibulum libero urna, hendrerit eu tortor sed, ullamcorper sodales justo. Aliquam erat volutpat. Sed sed urna dui.</p>
         </div>
       </div>
 
 
 
-        <div id="annotation-sidebar" class="annotation-closed">
-          <div class="annotation_sidebar_arrow">
-            <svg height="25" width="25">
-              <path stroke="#b2d7fe" stroke-width="2" stroke-linecap="round" d="M9.37 21.32L0 10.66 9.37 0l1.5 1.32-8.21 9.34L10.87 20l-1.5 1.32"></path>
-            </svg>
-          </div>
-          <span class="close ">
-            <svg width="50" height="25" version="1.1"
-                 xmlns="http://www.w3.org/2000/svg">
-                <line x1="1" y1="11"
-                      x2="11" y2="1"
-                      stroke="black"
-                      stroke-width="2"/>
-                <line x1="1" y1="1"
-                      x2="11" y2="11"
-                      stroke="black"
-                      stroke-width="2"/>
-            </svg>
-          </span>
-          <!-- start content -->
-          <br>
-          <div class="annotation-box">
-            <h3><span class="original"></span></h3>
-            <br>
-            <span class="annotation"></span>
-          </div>
-        </div>
+        <div id="annotation-sidebar" class="annotation-closed"></div>
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
