--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="ag-style.css">
     </head>
     <body>
-      <div class="container" style="width:500px;margin:50px;">
+      <div class="container">
         <div class="annotation-genius">
           <h1>Annotation Genius: Apply Genius-Style Annotations to Your Project</h1>
           <p><span class="ag" id="1">Lorem ipsum dolor sit amet,</span> consectetur adipiscing elit. Integer posuere sem vitae eleifend venenatis. Vivamus at lectus non justo vulputate sagittis ac posuere purus. Vivamus fermentum turpis a dignissim placerat.</p>
@@ -29,12 +29,8 @@
         </div>
       </div>
 
-
-
         <div id="annotation-sidebar" class="annotation-closed"></div>
-
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+     
         <script src="annotation-genius.js"></script>
     </body>
 </html>
